# in-tune

./: .gitignore  Cargo.toml  Makefile  README.md
src/: lib.rs
ui/: .env  .eslintcache  package.json
ui/src/: App.css  App.tsx  index.css
ui/src/Components/BarAndSelectors/: BarAndSelectors.tsx
ui/src/Components/MusicNotation/Bar/: Bar.tsx
ui/src/Components/Selectors/Keys/: Keys.tsx
ui/src/Components/Selectors/Scales/: Scales.tsx
ui/src/Keys/: keys.ts
