[package]
name = "intune"
version = "0.1.0"
authors = ["Adam Hanna <ahanna@alumni.mines.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vst = "0.2.1"
vst-gui = { git = "https://github.com/mikesoylu/rust-vst-gui" }
serde_json = "1.0.6"
log = "0.4.11"
simplelog = "^0.7.6"

[lib]
name = "intune"
crate-type = ["cdylib"]
